Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-9038

sanity-hsm: kernel panic in lbcfs_kkuc_group_put()

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.10.0
    • None
    • None
    • 3
    • 9223372036854775807

      This issue was created by maloo for Quentin Bouget <quentin.bouget@cea.fr>

      This issue relates to the following test suite run: patch_for_lu-8911.

      test_1a crashes the Client 2 on Maloo with a very low failure rate (<5%)
      Following tests fail with "'/mnt/lustre2' not mounted" and eventually sanity-hsm times out.

      There seems to be a race in libcfs_kkuc_group_put().

      I currently don't have a method to reproduce.

            bfaccini Bruno Faccini (Inactive)
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: